--- a/frontend/public/pages/config.html
+++ b/frontend/public/pages/config.html
@@ -103,7 +103,7 @@
       </div>
 
       <div class="config-item">
-        <button id="btnSaveConfig" class="record-button" disabled>Valider</button>
+        <button id="btnSaveConfig" class="record-button" enabled>Valider</button>
       </div>
 
       <div class="config-item" style="grid-column: span 2;">
