--- a/frontend/public/pages/config.html
+++ b/frontend/public/pages/config.html
@@ -140,6 +140,10 @@
       <button id="btnRestoreSelected" class="danger-button">Restaurer</button>
       <p id="restoreStatus"></p>
     </div>
+    
+    <div class="horizontal-row">
+      <button id="btnRealignSequences" class="record-button">Réaligner les séquences</button>
+    </div>
 
  <!-- Overlay de chargement -->
     <div id="loadingOverlay" style="
