--- a/frontend/public/pages/collection.html
+++ b/frontend/public/pages/collection.html
@@ -72,6 +72,8 @@
   <div id="cstm-topControls">
     <div id="cstm-filtersInline" class="cstm-inlineControls"></div>
    <!-- <div id="cstm-cartInline" class="cstm-inlineControls"></div> -->
+   <div id="zoom-viewer" class="hidden"></div>
+
   </div>
   
   <!-- ---- Boutons flottants ---- -->
