--- a/frontend/public/pages/home.html
+++ b/frontend/public/pages/home.html
@@ -13,7 +13,7 @@
 
     <!-- Bandeau en haut de la page -->
     <div class="bandeau-container">
-      <img src="../images/bandeau_kinocaen.png" alt="Bandeau KinoCaen" class="bandeau-img" />
+      <img src="../images/bandeau_costumerie.png" alt="Bandeau Costumerie" class="bandeau-img" />
     </div>
     <div class="flex-row">
         <div>
