--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="login-container">
-    <img src="images/bandeau_kinocaen.png" alt="Bandeau KinoCaen" class="bandeau-img" />
+    <img src="images/bandeau_costumerie.png" alt="Bandeau Costumerie" class="bandeau-img" />
     <div class="login-title">Page de connexion à la base de gestion d'inventaire</div>
 
     <form class="login-form" id="login-form">
