--- a/frontend/public/pages/home.html
+++ b/frontend/public/pages/home.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <!-- <title>Visualiseur de pages</title> -->
+   <title>Visualiseur de pages</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -25,7 +25,7 @@
         <h3 id="user_role" style="margin-left:auto; display:block;">connexion anonyme</h3>
         <button type="button" class="btn btn-primary" id="signout">se déconnecter</button>
     </div>
-<h1>Visualiseur de pages</h1>
+    <!-- <h1>Visualiseur de pages</h1> -->
 
 <div id="tabs" class="tabs"></div>
 <div id="content" class="content">Sélectionne un onglet pour afficher le contenu.</div>
