--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,9 +10,10 @@
 <body class="login-page">
 
   <div class="login-container">
-    <img src="images/bandeau_costumerie.png"
-         alt="Bandeau Costumerie"
-         class="bandeau-img" />
+    <img id="bandeau-img"
+    src=""
+    alt="Bandeau Costumerie"
+    class="bandeau-img" />
 
     <div class="login-title">Page de connexion à la base de gestion d'inventaire</div>
 
