--- a/frontend/public/pages/home.html
+++ b/frontend/public/pages/home.html
@@ -13,7 +13,7 @@
 
     <!-- Bandeau en haut de la page -->
     <div class="bandeau-container">
-      <img id="bandeau-img-top" src="" alt="Bandeau Costumerie" class="bandeau-img" />
+      <img id="bandeau-img" src="" alt="Bandeau Costumerie" class="bandeau-img" />
     </div>
     <div class="flex-row">
         <div>
