--- a/frontend/public/pages/account_booking_config.html
+++ b/frontend/public/pages/account_booking_config.html
@@ -1,67 +1,16 @@
-<div class="acc-page">
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Mes Réservations</title>
+  <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
 
-  <!-- Organisation -->
-  <section class="acc-card acc-org-card">
-    <h2 class="acc-title">Organisation</h2>
+  <h1>Mes Réservations</h1>
 
-    <div class="acc-grid">
-      <div class="acc-field">
-        <label class="acc-label" for="acc-org-name">Nom</label>
-        <input id="acc-org-name" class="acc-input" type="text" />
-      </div>
-
-      <div class="acc-field">
-        <label class="acc-label" for="acc-org-address">Adresse</label>
-        <input id="acc-org-address" class="acc-input" type="text" />
-      </div>
-
-      <div class="acc-field">
-        <label class="acc-label" for="acc-org-referent">Référent</label>
-        <select id="acc-org-referent" class="acc-select"></select>
-      </div>
-    </div>
-
-    <div class="acc-actions">
-      <button class="acc-btn acc-btn-save-org">Enregistrer organisation</button>
-      <button class="acc-btn acc-btn-delete-org">Supprimer organisation</button>
-    </div>
-  </section>
-
-
-  <!-- Personnes liées -->
-  <section class="acc-card acc-person-section">
-    <h2 class="acc-title">Personnes liées</h2>
-
-    <div id="acc-person-list" class="acc-person-list"></div>
-
-    <button class="acc-btn acc-btn-add-person">Ajouter une personne</button>
-  </section>
-
-
-  <!-- Mot de passe -->
-  <section class="acc-card acc-password-card">
-    <h2 class="acc-title">Changer le mot de passe</h2>
-
-    <div class="acc-grid">
-      <div class="acc-field">
-        <label class="acc-label" for="acc-pass-current">Mot de passe actuel</label>
-        <input id="acc-pass-current" class="acc-input" type="password" />
-      </div>
-
-      <div class="acc-field">
-        <label class="acc-label" for="acc-pass-new">Nouveau mot de passe</label>
-        <input id="acc-pass-new" class="acc-input" type="password" />
-      </div>
-
-      <div class="acc-field">
-        <label class="acc-label" for="acc-pass-confirm">Confirmer le mot de passe</label>
-        <input id="acc-pass-confirm" class="acc-input" type="password" />
-      </div>
-    </div>
-
-    <div class="acc-actions">
-      <button class="acc-btn acc-btn-save-pass">Mettre à jour le mot de passe</button>
-    </div>
-  </section>
-
-</div>
+  <div class="booking-list" id="bookingList">
+    <!-- Les réservations seront injectées ici via JS -->
+  </div>
+</body>
+</html>
